--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
-
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.5'   // 3.5.5 henüz yok, en son stable 3.3.x
+    id 'org.springframework.boot' version '3.3.5'
     id 'io.spring.dependency-management' version '1.1.5'
 }
-
 
 
 java {
@@ -18,25 +16,24 @@ repositories {
 }
 
 dependencies {
-    // Spring Boot Starterlar
-
-
-
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-    // PostgreSQL Driver
+
     runtimeOnly 'org.postgresql:postgresql'
 
-    // Lombok (opsiyonel ama tavsiye edilir)
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
 
-    // Test
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
