--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,12 @@
 spring.application.name=demo1
 server.port=8081
-
 spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
 spring.datasource.username=postgres
 spring.datasource.password=2425
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernaete.SQL=DEBUG
